--- a/DerekPauley/Views/Home/Build.cshtml
+++ b/DerekPauley/Views/Home/Build.cshtml
@@ -4,14 +4,9 @@
     Layout = "~/Views/Layout.cshtml";
 }
 
-<h2 class="text-info">I need experience.</h2>
+<h2 class="text-info">Under Construction</h2>
 
 <hr />
-<p class="lead">I would love work on a project, create a website for you or your business, and yes - for free. I care about the direction of my career and know I still have a ways to go. I am a college student, and while learning things there is always great, real experience and hands on projects is the greatest way to succeed.</p><br />
-<hr />
-<p class="lead">Also before I came into the field of development I have been building computers and maintaining systems for years. I am Security+ certified, A+ certified, Microsoft Certified and do have a resume which I have provided a link to on my @Html.ActionLink("Contact","Contact") page. So ask me a quesiton about any latest system or device. And if you're in the Clarksville and Nashville area I can even help you out in person with any aspect of technology. But if you would like to help out the cause by throwing me some code to work on or getting a free site, with the option for scalability and increased performance, on the Microsoft Azure platform - then please reach out to me today.</p><br />
-<div class="well-sm">
-    <p class="lead"><strong>Let me Build Something For You!</strong></p>
-</div>
+<p class=" text-info lead">Follow me on Twitter or visit my <a href="http://fromtechtodev.blogspot.com/" title="Read and Share!">Blog</a> for updates</p><hr/><p class="text-info lead">Also, feel free to go to my @Html.ActionLink("Contact","Contact") page and drop me an email.</p>
 
 
