--- a/DerekPauley/Views/Home/Index.cshtml
+++ b/DerekPauley/Views/Home/Index.cshtml
@@ -5,22 +5,16 @@
 }
 
 
-<h1>Welcome to the early stages of my new website.</h1>
+<h1><b>Welcome to the early stages of my new website.</b></h1>
 <hr>
 <div class="row">
-    <div class="col col-sm-8">
-        <p class="lead">lorem ispum</p>
+    <div class="col col-sm-12">
+        <p class="lead">There isn't much here yet as this site is still under construction and will undergo many changes over the next few months. Feel free to follow the links to my blog or Twitter. I will always be posting new information there. The C#/ASP.NET/JS tabs above are places for posting useful information/book reviews/code samples for projects relating to those technologies.</p>
         
-
+        </div>
     </div>
 
-    <div class="col col-sm-4">
-        <h4>Still in school</h4>I am a student online at WKU for Computer Information Technology. I have a very flexible schedule. All classes are online.
-        <hr>
-
-        <h4>After Experience</h4>I am passionate to build upon what I already know and apply those skills in a real world project. Please visit my @Html.ActionLink("Let Me Build Something For You","Build") page for more information.
-    </div>
-    </div>
+    
 
 
 
