--- a/DerekPauley/Views/Layout.cshtml
+++ b/DerekPauley/Views/Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = null;
 }
-<!--Make sure to remove all design comments before production-->
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="col col-sm-6">
                     <h1>
-                        <a href="#" title="xxx">
+                        <a href="http://derekpauley.azurewebsites.net" title="Home">
                             Derek Pauley<br>
                             <small>Junior Developer</small><br /><a href="http://www.twitter.com/dptech23" target="_blank"><img src="http://www.buttonshut.com/Twitter-Buttons/Twitter-Buttons-5-74-.png" title="Follow Me!" alt="Twitter" width="61px" border="0" /> <iframe src="http://ghbtns.com/github-btn.html?user=dptechdev&type=follow&size=large" height="30" width="240" frameborder="0" scrolling="0" style="width:240px; height: 30px;" allowtransparency="true"></iframe>
 
@@ -99,8 +99,7 @@
                               
 
                                    
-                                    <!--</p></div><br /><p class="lead">Welcome to DerekPauley.com<br />soon it wont say <i>azurewebsites.net</i><br />This is my early prototype.
-                                    </p>-->
+                                    
                             </div>
                         </div>
 
@@ -118,20 +117,7 @@
                         <li>
 
                             
-                            @*<h3 class="highlight" style="font-style: italic">
-                                Lets get social!
-                            </h3>
-                        </li>
-                        <li><a href="http://www.fromtechtodev.blogspot.com" title="Read and Share!">Blog</a></li>
-                        <li>
-                            
-                            <a href="http://www.twitter.com/dptech23" title="Follow Me!">Twitter</a>
-                        </li>
-                        <li>
-                            
-                            <a href="#" title="Coming Soon!">GitHub</a> <small>Coming Soon</small>
-                                
-                        </li>*@
+                         
                         
                     </ul>
                     <div class="accordion" id="accordion2">
@@ -139,17 +125,7 @@
                             <br>
                             <br>
                             <br>
-                           @*<div class="accordion-heading">
-                                <h3 class="highlight">Lets get social</h3>
-                                <ul class="nav nav-stacked">
-                                    <li>
-                                        <a href="https://www.twitter.com/dptech23">Twitter</a>
-                                    </li>
-                                    <li><a href="#">Facebook</a></li>
-                                    <li><a href="#">Google+</a></li>
-                                    <li>Github - Up and coming.</li>
-                                </ul>
-                            </div>*@
+                           
                         </div>
                         <div class="accordion-group">
                             <div class="accordion-heading">
@@ -166,10 +142,10 @@
             </div>
             <div class="col col-sm-9">
                 <div class="panel">
-                    <!--Begin RenderBody--> 
+                   
                     @RenderBody()
                 </div>
-                <!--End RednerBody--> <!-- <-- <-- <-- Remove RenderBody tags at production-->
+                
 
                 <hr>
                 <hr>
