--- a/DerekPauley/Views/Home/Contact.cshtml
+++ b/DerekPauley/Views/Home/Contact.cshtml
@@ -1,7 +1,6 @@
-﻿
-@{
-    
-   
+﻿@{
+
+
     ViewBag.Title = "Contact";
     Layout = "~/Views/Layout.cshtml";
 }
@@ -13,7 +12,9 @@
 </script>
 <hr />
 <div class="well-lg">
-    <p class="lead">I can be contacted a number of ways.</p>
+    <p class="lead">
+        You can email me at any time for matters professional or personal: <hr /> <p class="text-info">droc37191@gmail.com</p> <p class="text-info">dpauleytechnology@gmail.com.</p><br />
+    </p>
 </div>
 
 
