--- a/DerekPauley/Views/Home/Csharp.cshtml
+++ b/DerekPauley/Views/Home/Csharp.cshtml
@@ -5,4 +5,6 @@
 }
 
 <h2>C#</h2>
+<hr />
+<p class="lead">This page is under construction. I will be posting all website/project updates on Twitter and my <a href="http://fromtechtodev.blogspot.com/" title="Read and Share!">Blog.</p>
 
