--- a/DerekPauley/Views/Home/Javascript.cshtml
+++ b/DerekPauley/Views/Home/Javascript.cshtml
@@ -5,4 +5,5 @@
 }
 
 <h2>Javascript</h2>
-
+<hr />
+<p class="lead">This page is under construction. I will be posting all website/project updates on Twitter and my <a href="http://fromtechtodev.blogspot.com/" title="Read and Share!">Blog.</p>
